<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/downloadsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_download"
        android:title="@string/downloads"
        app:showAsAction="always" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always"
        />

</menu>